github_data_collector/src/data/issue_comment/torrvision_crfasrnn.txt
I combin CRNasRNN  to FCN，but this error that i can not deal with it,
the title is information of error

Dear Authors,

This is a very great work! Thanks very much. 
How to change the parameters of Cropping2D in order to detect image with size about 640 * 480?

Thanks very much.
Dear All,

Initially an error "**xrange is not defined"** came when I tried to run the demo.py, then I changed the "xrange" to "range" and the py script started to run,however , anothe error came:
I0414 00:13:46.749788 14861 upgrade_proto.cpp:628] Successfully upgraded file specified using deprecated V1LayerParameter
Traceback (most recent call last):
  File "crfasrnn_demo.py", line 205, in <module>
    main(sys.argv[1:])
  File "crfasrnn_demo.py", line 201, in main
    run_crfrnn(input_file, output_file, gpu_device)
  File "crfasrnn_demo.py", line 138, in run_crfrnn
    segmentation = crfrnn_segmenter(_MODEL_DEF_FILE, _MODEL_FILE, gpu_device, [im])
  File "crfasrnn_demo.py", line 97, in crfrnn_segmenter
    out = net.forward_all(**{net.inputs[0]: caffe_in})
  File "../caffe/python/caffe/pycaffe.py", line 176, in _Net_forward_all
    for batch in self._batch(kwargs):
  **File "../caffe/python/caffe/pycaffe.py", line 260**, in _Net_batch
    num = len(blobs.itervalues().next())
**AttributeError: 'dict' object has no attribute 'itervalues'**

It seems that it is an compatible issue, 

thank you in advance!

 
In CRFasRNN, the `theta_alpha` and the `theta_gamma` are for spatial terms, and the `theta_beta` is for the term in feature space. In https://github.com/torrvision/crfasrnn/blob/22db6d8a1a69ecafe97085d44a4d05eeec299634/python-scripts/TVG_CRFRNN_COCO_VOC.prototxt#L144, the `theta_alpha` is `160`, but the `theta_gamma` is `3`. Why did these two parameters set for so much difference? In addition, the `theta_alpha` is `160` means that the image has a big spatial blur, right? What does this mean? Does any know the reason? Thanks.
@sadeepj @bittnt 
Is it possible to process multiple images simultaneously via Multithreading.
**Can you please suggest - the required changes to be made for this.**

Thanks
Akash
  
Hi Everyone

I am trying to replicate the training of this model on Pascal VOC augmented dataset which has ~11500 training images and 346 validation images.

I have following queries regarding training:

1. For me, a whole pass through the dataset of 11500 images takes approximately 15-16 hours where i use a batch size of 1. Am I missing something or is it similarly slow for everyone?
2. How many complete passes/epochs through complete datasets are required to train model to desired accuracy roughly 70 Miu?
3. How is the trend - Will initial validation Miu accuracy decrease starting from fcn8 and then decrease. Any trend in this whosoever has trained successfully will really be of help. 


Regards
Ankit 
Hello
I am trying to train cfrasrnn with my own data using https://github.com/martinkersner/train-CRF-RNN/
I had to slightly modify some pieces of the code to make it run on my Mac (OSX.12) but it now runs the training.
I have one first problem when trying to parse the log file in order to vizualise loss (using loss_from_log.py https://github.com/martinkersner/train-CRF-RNN/blob/master/loss_from_log.py) : 
_Traceback (most recent call last):
  File "loss_from_log.py", line 123, in <module>
    main()
  File "loss_from_log.py", line 43, in main
    train_loss.append(float(matched.group(1)))
AttributeError: 'NoneType' object has no attribute 'group'_

Indeed, in the log file, there's no "loss-ft" output. Why ?

The second is that when I try to use the caffemodel output (e.g. iteration 5000 or 7000) to test if it recognizes object, it now fails to do so (I tried with various objects).
What am I doing wrong please ?
Many thanks if any one can help !
Hi
I tried to run the crfasrnn_demo.py on aws g3.16xlarge gpu instance.
but it took about 4 seconds.
how to can make it more fast?
cheers.
Hi,
I am trying to build caffe but get the following errors after make:

[  2%] Built target proto
Scanning dependencies of target caffe
[  2%] Building CXX object src/caffe/CMakeFiles/caffe.dir/util/upgrade_proto.cpp.o
/home/rishabh/Downloads/crfasrnn/caffe/src/caffe/util/upgrade_proto.cpp: In function ‘bool caffe::UpgradeV0LayerParameter(const caffe::V1LayerParameter&, caffe::V1LayerParameter*)’:
/home/rishabh/Downloads/crfasrnn/caffe/src/caffe/util/upgrade_proto.cpp:196:79: error: no matching function for call to ‘caffe::ConvolutionParameter::set_pad(google::protobuf::uint32)’
         layer_param->mutable_convolution_param()->set_pad(v0_layer_param.pad());
                                                                               ^
In file included from /home/rishabh/Downloads/crfasrnn/caffe/src/caffe/util/upgrade_proto.cpp:9:0:
/usr/local/include/caffe/proto/caffe.pb.h:16543:13: note: candidate: void caffe::ConvolutionParameter::set_pad(int, google::protobuf::uint32)
 inline void ConvolutionParameter::set_pad(int index, ::google::protobuf::uint32 value) {
             ^
/usr/local/include/caffe/proto/caffe.pb.h:16543:13: note:   candidate expects 2 arguments, 1 provided
/home/rishabh/Downloads/crfasrnn/caffe/src/caffe/util/upgrade_proto.cpp:207:40: error: no matching function for call to ‘caffe::ConvolutionParameter::set_kernel_size(google::protobuf::uint32)’
             v0_layer_param.kernelsize());
                                        ^
In file included from /home/rishabh/Downloads/crfasrnn/caffe/src/caffe/util/upgrade_proto.cpp:9:0:
/usr/local/include/caffe/proto/caffe.pb.h:16573:13: note: candidate: void caffe::ConvolutionParameter::set_kernel_size(int, google::protobuf::uint32)
 inline void ConvolutionParameter::set_kernel_size(int index, ::google::protobuf::uint32 value) {
             ^
/usr/local/include/caffe/proto/caffe.pb.h:16573:13: note:   candidate expects 2 arguments, 1 provided
/home/rishabh/Downloads/crfasrnn/caffe/src/caffe/util/upgrade_proto.cpp:228:36: error: no matching function for call to ‘caffe::ConvolutionParameter::set_stride(google::protobuf::uint32)’
             v0_layer_param.stride());
                                    ^
In file included from /home/rishabh/Downloads/crfasrnn/caffe/src/caffe/util/upgrade_proto.cpp:9:0:
/usr/local/include/caffe/proto/caffe.pb.h:16603:13: note: candidate: void caffe::ConvolutionParameter::set_stride(int, google::protobuf::uint32)
 inline void ConvolutionParameter::set_stride(int index, ::google::protobuf::uint32 value) {
             ^
/usr/local/include/caffe/proto/caffe.pb.h:16603:13: note:   candidate expects 2 arguments, 1 provided
/home/rishabh/Downloads/crfasrnn/caffe/src/caffe/util/upgrade_proto.cpp: In function ‘caffe::V1LayerParameter_LayerType caffe::UpgradeV0LayerType(const string&)’:
/home/rishabh/Downloads/crfasrnn/caffe/src/caffe/util/upgrade_proto.cpp:480:12: error: ‘V1LayerParameter_LayerType_CROP’ was not declared in this scope
     return V1LayerParameter_LayerType_CROP;
            ^
/home/rishabh/Downloads/crfasrnn/caffe/src/caffe/util/upgrade_proto.cpp: In function ‘const char* caffe::UpgradeV1LayerType(caffe::V1LayerParameter_LayerType)’:
/home/rishabh/Downloads/crfasrnn/caffe/src/caffe/util/upgrade_proto.cpp:858:8: error: ‘V1LayerParameter_LayerType_CROP’ was not declared in this scope
   case V1LayerParameter_LayerType_CROP:
        ^
src/caffe/CMakeFiles/caffe.dir/build.make:20997: recipe for target 'src/caffe/CMakeFiles/caffe.dir/util/upgrade_proto.cpp.o' failed
make[2]: *** [src/caffe/CMakeFiles/caffe.dir/util/upgrade_proto.cpp.o] Error 1
CMakeFiles/Makefile2:272: recipe for target 'src/caffe/CMakeFiles/caffe.dir/all' failed
make[1]: *** [src/caffe/CMakeFiles/caffe.dir/all] Error 2
Makefile:127: recipe for target 'all' failed
make: *** [all] Error 2

I have successfully built the BVLC caffe repo in the past without any errors.
Please help me out.

Thanks.
Hi @bittnt 
I am trying to train with my own data following Martin Kresner's https://github.com/martinkersner/train-CRF-RNN
 lmdb creation is OK nut when I make 'python2.7 solve.py 2>&1 | tee train.log', it gives me the error above. As you can see, batch_size =1 !
WHat should I do ?

[train.log](https://github.com/torrvision/crfasrnn/files/1499743/train.log)
mentionned.